prettier インストールし直し、タイポ

--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "fix": "npm run -s format && npm run -s lint:fix",
-    "format": " prettier --write --loglevel=warn'{public,src}/**/*.{js,jsx,ts,tsx,html,gql,graphql,json}'",
+    "format": " prettier --write --loglevel=warn '{public,src}/**/*.{js,jsx,ts,tsx,html,gql,graphql,json}'",
     "lint": "npm run -s lint:style; npm run -s lint:es",
     "lint:fix": "npm run -s lint:style:fix && npm run -s lint:es:fix",
     "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
@@ -62,6 +62,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2",
     "stylelint": "^14.9.0",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^26.0.0",
