--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.4.2",
+    "@types/prettier": "^2.6.3",
     "@types/testing-library__jest-dom": "^5.14.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -62,7 +63,9 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
+    "simple-git-hooks": "^2.8.0",
     "stylelint": "^14.9.0",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^26.0.0",
