--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -12,7 +12,12 @@
     "@types/react-dom": "^18.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -30,6 +35,7 @@
     "lint:conflict": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "lint:style": "stylelint 'src/**/*.{css,less,sass,scss}'",
     "lint:style:fix": "stylelint --fix 'src/**/*.{css,less,sass,scss}'",
+    "postinstall": "semantic-ui-css-patch",
     "preinstall": "typesync || :"
   },
   "eslintConfig": {
@@ -51,13 +57,16 @@
     ]
   },
   "devDependencies": {
+    "@semantic-ui-react/css-patch": "^1.0.0",
     "@types/eslint": "^8.4.2",
     "@types/prettier": "^2.6.3",
+    "@types/react-helmet": "^6.1.5",
     "@types/testing-library__jest-dom": "^5.14.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
