--- a/app_front/app/tsconfig.json
+++ b/app_front/app/tsconfig.json
@@ -26,7 +26,9 @@
     // MUI
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    //.d.tsのディレクトリパス
+    "typeRoots" : ["./node_modules/@types/", "./src/types/"]
   },
   "include": [
     "src"
