DetailTab、ContentCardの雛型追加

--- a/app_front/app/tsconfig.json
+++ b/app_front/app/tsconfig.json
@@ -28,7 +28,7 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     //.d.tsのディレクトリパス
-    "typeRoots" : ["./node_modules/@types/", "./src/types/"]
+    "typeRoots" : ["node_modules/@types/", "src/types/"]
   },
   "include": [
     "src"
