--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -11,12 +11,15 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "@types/history": "^5.0.0",
+    "@types/http-proxy-middleware": "^1.0.0",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/react-swipeable-views": "^0.13.1",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
