--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -18,19 +18,25 @@
     "@types/react-dom": "^18.0.3",
     "@types/react-swipeable-views": "^0.13.1",
     "axios": "^0.27.2",
+    "camelcase-keys": "^8.0.2",
     "date-fns": "^2.28.0",
+    "decoders": "^2.0.1",
     "http-proxy-middleware": "^2.0.6",
+    "ky": "^0.31.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-query": "^3.39.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
+    "ts-api-toolkit": "^2.0.16",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
