--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
+    "recharts": "^2.1.16",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "ts-api-toolkit": "^2.0.16",
