--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/react-show-more-text": "^1.4.2",
     "@types/react-swipeable-views": "^0.13.1",
     "axios": "^0.27.2",
     "camelcase-keys": "^8.0.2",
@@ -24,18 +25,22 @@
     "http-proxy-middleware": "^2.0.6",
     "ky": "^0.31.3",
     "react": "^18.1.0",
+    "react-clamp-lines": "^3.0.3",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-query": "^3.39.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.6.2",
     "react-swipeable-views": "^0.14.0",
+    "react-text-truncate": "^0.19.0",
     "recharts": "^2.1.16",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "ts-api-toolkit": "^2.0.16",
     "typescript": "^4.6.4",
+    "use-clamp-text": "^1.1.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.19.1"
   },
@@ -79,6 +84,7 @@
     "@types/eslint": "^8.4.2",
     "@types/prettier": "^2.6.3",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-text-truncate": "^0.14.1",
     "@types/testing-library__jest-dom": "^5.14.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
