--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@testing-library/jest-dom": "^5.16.4",
@@ -28,6 +30,7 @@
     "react-clamp-lines": "^3.0.3",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.41.1",
     "react-query": "^3.39.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
