--- a/app_front/app/package.json
+++ b/app_front/app/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.114",
+    "@mui/material": "^5.11.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
@@ -28,16 +29,18 @@
     "ky": "^0.31.3",
     "react": "^18.1.0",
     "react-clamp-lines": "^3.0.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.41.1",
     "react-query": "^3.39.2",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-show-more-text": "^1.6.2",
     "react-swipeable-views": "^0.14.0",
     "react-text-truncate": "^0.19.0",
+    "react-toastify": "^9.1.1",
     "recharts": "^2.1.16",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
