ディレクトリ変更に伴うreact関連のインポートパス修正、ESLint適用

--- a/react_frontend/app_main/.prettierrc
+++ b/react_frontend/app_main/.prettierrc
@@ -1,7 +1,6 @@
 {
-    "printWidth": 100,
-    "tabWidth": 2,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "endOfLine": "auto"
+  "printWidth": 100,
+  "tabWidth": 2,
+  "singleQuote": true,
+  "trailingComma": "all"
 }
