--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,28 @@
 {
-    // ESLintでワークスペースの第一階層にtsconfig.jsonがないとエラーが出るため
+    // VSCodeのワークスペースのサブディレクトリにtsconfig.jsonがある場合の設定
     "eslint.workingDirectories": ["./react_frontend/app_main"],
     "typescript.tsdk": "./react_frontend/app_main/node_modules/typescript/lib",
+    "eslint.enable": true,
+    "eslint.run": "onSave",
+
+    // Prettier
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "[graphql]": {
+        "editor.formatOnSave": true
+    },
+    "[javascript]": {
+        "editor.formatOnSave": true
+    },
+    "[javascriptreact]": {
+        "editor.formatOnSave": true
+    },
+    "[json]": {
+        "editor.formatOnSave": true
+    },
+    "[typescript]": {
+        "editor.formatOnSave": true
+    },
+    "[typescriptreact]": {
+        "editor.formatOnSave": true
+    },
 }
