--- a/react_frontend/app_main/package.json
+++ b/react_frontend/app_main/package.json
@@ -86,6 +86,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@semantic-ui-react/css-patch": "^1.0.0",
     "@types/eslint": "^8.4.2",
     "@types/prettier": "^2.6.3",
@@ -98,11 +99,11 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
     "simple-git-hooks": "^2.8.0",
