--- a/react_frontend/app_main/package.json
+++ b/react_frontend/app_main/package.json
@@ -45,7 +45,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "ts-api-toolkit": "^2.0.16",
-    "typescript": "4.6.4",
+    "typescript": "^4.6.4",
     "use-clamp-text": "^1.1.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.19.1"
@@ -86,24 +86,23 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@semantic-ui-react/css-patch": "^1.0.0",
     "@types/eslint": "^8.4.2",
     "@types/prettier": "^2.6.3",
     "@types/react-helmet": "^6.1.5",
     "@types/react-text-truncate": "^0.14.1",
     "@types/testing-library__jest-dom": "^5.14.3",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "lint-staged": "^13.0.1",
     "prettier": "^2.6.2",
     "simple-git-hooks": "^2.8.0",
