--- a/react_frontend/app_main/tsconfig.json
+++ b/react_frontend/app_main/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -32,8 +28,8 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     //.d.tsのディレクトリパス
-    "typeRoots" : ["node_modules/@types/", "src/types/"]
+    "typeRoots": ["node_modules/@types/", "src/types/"]
   },
-  // "include": ["src/**/*"]
-  "include": ["src"]
+  "include": ["src/**/*"]
+  // "include": ["src"]
 }
